--- a/WebContent/assets/css/styleCreateA.css
+++ b/WebContent/assets/css/styleCreateA.css
@@ -1,9 +1,8 @@
 .container {
-	display: flex;
-	flex-wrap: wrap;
 	justify-content:center;
 	margin: auto;
 }
+
 .cardTitle {
 	margin: auto;
 	padding: 10px 30px;
@@ -12,8 +11,8 @@
 .card {
 	margin: auto;
 	box-sizing: border-box;
-	min-width: 450px;
-	height: 150px;
+	width: 600px;
+	height:300px;
 	padding: 10px 30px;
 	box-shadow: lightgray 4px 4px 20px;
 }
@@ -31,42 +30,11 @@ h2 {
 	height: 70px;
 	font-size: 24px;
 }
-.facture {
-	text-align : center;
-}
-.prix p {
-	text-align: center;
-}
-
-.prix p {
-	font-weight: bold;
-	font-size: 16px;
-}
 
 option[value=""][disabled] {
 	display: none;
 }
 
-table {
-	text-align: right;
-}
-
-th, td {
-	padding: 0px 10px;
-}
-
-th {
-	border-bottom: 1px solid black;
-	min-width: 100px;
-}
-
-td {
-	border-bottom: 1px solid #ddd;
-}
-
-tr:nth-child(even) {
-	background-color: #f2f2f2;
-}
 
 .total {
 	text-align: right;
